app/policies/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
spec:
  containers:
  - name: bad
    image: nginx:latest
    securityContext:
      privileged: true
