app/policies/hardened-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hardened
  namespace: chas-ff
  labels:
    team: security
spec:
  serviceAccountName: custom-sa
  containers:
    - name: app
      image: localhost:5001/lab2-hardened-app:latest
      imagePullPolicy: IfNotPresent
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        readOnlyRootFilesystem: true
        capabilities:
          drop: ["ALL"]
      resources:
        limits:
          cpu: "500m"
          memory: "256Mi"
        requests:
          cpu: "250m"
          memory: "128Mi"
      livenessProbe:
        httpGet:
          path: /healthz
          port: 5000
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        httpGet:
          path: /ready
          port: 5000
        initialDelaySeconds: 5
        periodSeconds: 10
